Fix Text-align errors

--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -47,7 +47,7 @@
 }
 
 #about #presentation p {
-  text-align: flex-start;
+  text-align: start;
   max-width: 70%;
   font-size: 1.5em;
   color: #ffffff;
